# sfs

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  kernel-ci.yml  release.yml
contrib/libblkid-sfs/: README.md  sfs.c
crates/sfs-bench/: Cargo.toml
crates/sfs-bench/src/: lib.rs
crates/sfs-bench/tests/: bench_smoke.rs
crates/sfs-cli/: Cargo.toml
crates/sfs-cli/src/: identity.rs  keysrc.rs  lib.rs
crates/sfs-cli/tests/: pack_roundtrip.rs  pack_slack_remount.rs
crates/sfs-core/: Cargo.toml
crates/sfs-core/benches/: chunking.rs  crypto.rs  read_hotpath.rs  resolve_trie.rs  write_path.rs
crates/sfs-core/src/: api.rs  block.rs  commit.rs  commit_profile.rs  fsck.rs  inspect.rs  lib.rs  pio.rs  recovery.rs  retention.rs  stats.rs  unit.rs  wal.rs
crates/sfs-core/src/catalog/: mod.rs  trie.rs
crates/sfs-core/src/container/: alloc.rs  backend.rs  defrag.rs  header.rs  mod.rs  segment.rs
crates/sfs-core/src/crypto/: aead.rs  bench.rs  fingerprint.rs  identity.rs  kdf.rs  key_grant.rs  mod.rs  negotiate.rs  none.rs  p2p.rs  sign.rs  xts.rs
crates/sfs-core/src/version/: mod.rs  store.rs  vector.rs  verify_trailer.rs  writerset.rs
crates/sfs-core/tests/: alloc.rs  async_write.rs  backend_io.rs  bitmap_fastpath.rs  block_export.rs  build_tree_bench.rs  catalog.rs  catalog_reclaim.rs  chunking.proptest-regressions  chunking.rs  cipher_none.rs  commit_profile_bench.rs  commits.rs  conflict.rs  crypto_roundtrip.rs  db_head_preserved.rs  decode_adversarial.rs  defrag.rs  differential_fuzz.rs  extend_within_fragment.rs  frag_dots.rs  fsck_check.rs  fsck_repair.rs  header_commit.rs  in_memory_backend.rs  incremental_rekey.rs  inplace_crash.rs  inspect_container.rs  inspect_history.rs  inspect_space.rs  inspect_units.rs  key_epoch_ctx36.rs  key_grant.rs  keyed_engine.rs  keyspace.rs  meta_seal.rs  meta_sync.rs  meta_vv.rs  mixed_suite_ops.rs  packing.rs  (+29 more)
crates/sfs-ffi/: Cargo.toml
crates/sfs-ffi/include/: sfs.h
crates/sfs-ffi/src/: lib.rs
crates/sfs-ffi/tests/: e2e_smoke.c  run_e2e.sh
crates/sfs-mount/: Cargo.toml  build.rs
crates/sfs-mount/src/: adapter.rs  attr.rs  fuse_unix.rs  inode.rs  keying.rs  lib.rs  wbcache.rs  winfsp_win.rs
crates/sfs-mount/tests/: adapter.rs  build_tree_bench.rs  e2e_mount_unix.rs  e2e_mount_windows.rs  fragsize_repro.rs  multiuser.rs  smoke.rs  write_back.rs
crates/sfs-nosql/: Cargo.toml
crates/sfs-nosql/src/: db.rs  index.rs  lib.rs  query.rs  record.rs  value.rs
crates/sfs-nosql/tests/: decode_adversarial.rs  patch_merge.rs
crates/sfs-saas/: Cargo.toml
crates/sfs-saas/src/: blobstore.rs  config.rs  lib.rs  net.rs  p2p.rs  recovery.rs  server.rs  srp.rs  store.rs  wire.rs
crates/sfs-saas/tests/: antidowngrade.rs  blobstore_size_regression.rs  caps_e2e.rs  deploy_modes.rs  enforcement_e2e.rs  h3_e2e.rs  keysharing_e2e.rs  net_e2e.rs  observability.rs  opencrypto_e2e.rs  p2p_net_e2e.rs  perf_bench.rs  persistence.rs  rate_limit.rs  recovery.rs  rekey_propagation_e2e.rs  revocation_e2e.rs  server_bin.rs  signing_e2e.rs  srp.rs  store.rs  token_persist.rs  writerset_e2e.rs  zk_proof_e2e.rs
crates/sfs-saas/tests/fixtures/: gen_srp_vectors.mjs  thinbus_nimbus_srp_vectors.json
crates/sfs-sync/: Cargo.toml
crates/sfs-sync/src/: lib.rs  peer.rs
crates/sfs-sync/tests/: conflict_e2e.rs  diff.rs  opencrypto_model.rs  p2p_engine_transport.rs  sync_roundtrip.rs  transport.rs
crates/sfs-tools/: Cargo.toml
crates/sfs-tools/src/: lib.rs  sync_lib.rs
crates/sfs-tools/tests/: ed25519_c_cross.rs  sfs_fsck_e2e.rs  sfs_info_e2e.rs  sfs_log_cat_e2e.rs  sfs_ls_stat_e2e.rs  sync_cli.rs
crates/sfs-wasm/: Cargo.toml  README.md
crates/sfs-wasm/.cargo/: config.toml
crates/sfs-wasm/src/: lib.rs
docs/: DESIGN.md  PERF-METHODOLOGY.md  SECURITY-MODEL.md
docs/kernel-driver/: 01-header-layout.md  02-catalog-trie.md  03-record-meta.md  04-crypto.md  05-vfs-blueprint.md  06-architecture.md
docs/ops/: self-hosting.md
docs/references/: aes-gcm.md  cbindgen.md  crc32fast.md  crypto-performance.md  dtolnay-rust-toolchain.md  format-versioning.md  fuser.md  generic-array.md  getrandom.md  github-actions-matrix.md  hkdf.md  identity-verification.md  nimbus-thinbus-srp.md  proptest.md  sha2.md  sparse-files-unix.md  sparse-files-windows.md  std-fileext-unix.md  std-fileext-windows.md  std-fs-file.md  winfsp-rs.md  xts-mode.md
kernel/: Kbuild  dkms-sign-hook.sh  dkms.conf  sfs_acl.c  sfs_attr.c  sfs_catalog.c  sfs_catalog.h  sfs_catcow.c  sfs_compat.h  sfs_cow.c  sfs_cow.h  sfs_crypto.c  sfs_crypto.h  sfs_data.c  sfs_defrag.c  sfs_defrag.h  sfs_dir.c  sfs_ed25519.c  sfs_ed25519.h  sfs_ed25519_tables.h  sfs_encode.c  sfs_encode.h  sfs_evict.c  sfs_evict.h  sfs_export.c  sfs_falloc.c  sfs_falloc.h  sfs_format.h  sfs_fs.h  sfs_header.c  sfs_header.h  sfs_inode.c  sfs_internal.h  sfs_ioctl.c  sfs_ioctl.h  sfs_kcrypto.c  sfs_meta.c  sfs_meta.h  sfs_ns.c  sfs_ns.h  (+14 more)
kernel/tools/: Makefile  enospc_atomicity.sh  mmap_smoke.c  roundtrip.sh  sfs_alloctest.c  sfs_backend_openssl.c  sfs_backend_openssl.h  sfs_bigrec.c  sfs_committest.c  sfs_cowcheck.sh  sfs_cowtest.c  sfs_defragrun.c  sfs_defragtest.c  sfs_dense_crossband.sh  sfs_edtest.c  sfs_evicttest.c  sfs_evil.c  sfs_fuzz.c  sfs_mkfs.c  sfs_mut.c  sfs_mut.h  sfs_overlap.c  sfs_probe.c  sfs_triecow.c  sfs_trimtest.c  sfs_verify.c  sfs_waltest.c  sfs_xattrtest.c  sfsctl.c  silent_loss_fsync.c  silent_loss_fsync.sh
packaging/: install.sh  uninstall.sh
packaging/etc/sfs/: maintain.conf  mok.conf.example  sfsd.conf.example
packaging/sbin/: sfs-maintain
packaging/systemd/: sfs-maintain@.service  sfs-maintain@.timer  sfsd.service  sfsd.socket
packaging/udev/: 62-sfs.rules
paper/: .gitignore  build.sh  paper.tex  references.bib
paper/sections/: abstract.tex  annex_nosql.tex  background.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  related_work.tex
